# Minerva

./: .gitignore  README.md
Core/: CMakeLists.txt  CMakeSettings.json
Core/lib/: glfw3.lib
Core/shader/: shader.fs.glsl  shader.vert  shader.vs.glsl
Core/src/: CMakeLists.txt  Core.cpp  Core.h  debug.cpp  debug.h  main.cpp  main.h  renderer.cpp  renderer.h  unitTest.cpp  unitTest.h
Core/src/render/: CMakeLists.txt  renderer.cpp  renderer.h  shader.cpp  shader.h
Core/src/util/: CMakeLists.txt  util.cpp  util.h
